--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@jojojs/bilibili-mcp-server",
   "version": "0.0.1",
   "packageManager": "pnpm@10.8.0",
-  "description": "MCP server for using the Bilibili API",
+  "description": "MCP server for using the bilibili API",
   "license": "MIT",
   "author": "Soon Wang",
   "homepage": "https://github.com/wangshunnn/bilibili-mcp-server",
