--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.11.0",
     "@types/node": "^22.15.12",
+    "@types/node-fetch": "^2.6.12",
     "md5": "^2.3.0",
-    "zod": "^3.24.4",
-    "zod-to-json-schema": "^3.23.5"
+    "node-fetch": "^3.3.2",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
