--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "publish:major": "npm version major && npm publish --access public"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.11.0",
+    "@modelcontextprotocol/sdk": "^1.17.1",
+    "@types/express": "^5.0.3",
     "@types/node": "^22.15.12",
     "@types/node-fetch": "^2.6.12",
+    "express": "^5.1.0",
     "node-fetch": "^3.3.2",
     "zod": "^3.24.4"
   },
